# rag-backend-ai-textbook

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/chat/: __init__.py
app/db/: __init__.py
app/ingest/: __init__.py  api.py  main.py  requirements.txt  service.py  test_ingestion.py
app/query/: router.py  service.py
