[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "rag-backend"
version = "0.1.0"
description = "Minimal RAG system backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]